Added button funcionality

--- a/Notenprogramm/Notenprogramm.csproj
+++ b/Notenprogramm/Notenprogramm.csproj
@@ -54,8 +54,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="CreatingLesson.xaml.cs">
-      <DependentUpon>CreatingLesson.xaml</DependentUpon>
+    <Compile Include="CreateLessonWindow.xaml.cs">
+      <DependentUpon>CreateLessonWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Grade.cs" />
     <Compile Include="Handler.cs" />
@@ -64,7 +64,7 @@
     <Compile Include="Rating.cs" />
     <Compile Include="StackpanelBuilder.cs" />
     <Compile Include="Student.cs" />
-    <Page Include="CreatingLesson.xaml">
+    <Page Include="CreateLessonWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
